--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <a target="blank" href="https://twitch.tv/directory/following" class="square">Twitch</a>
 
-<a href="https://www.reddit.com/" class="square">Reddit</a>
+<a href="http://gofuckyourselfitsnotforsale.com/" class="square">Eat my Ass</a>
 
                                        <!-- second row -->
 <a target="blank" href="https://boards.4chan.org/r9k/" class="square">/r9k/</a>    
