--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 <a href="http://gofuckyourselfitsnotforsale.com/" class="square">Eat my Ass</a>
 
                                        <!-- second row -->
-<a target="blank" href="https://boards.4chan.org/r9k/" class="square">/r9k/</a>    
+<a target="blank" href="https://rule34.xxx/" class="square">Rule34</a>    
 
-<a target="blank" href="https://boards.4chan.org/w/" class="square">/w/</a>
+<a target="blank" href="https://e621.net/" class="square">e621</a>
 
-<a target="blank" href="http://boards.4chan.org/b/" class="square">/b/</a>
+<a target="blank" href="http://danbooru.donmai.us/" class="square">Danbooru</a>
 
-<a target="blank" href="https://www.hentaihaven.org/" class="square">Hentai Haven</a>
+<a target="blank" href="https://gelbooru.com" class="square">Gelbooru</a>
 
                                         <!-- third row -->
     
-<a target="blank" href="http://crunchyroll.com/" class="square">Crunchyroll</a>
+<a target="blank" href="http://hentaihaven.org/" class="square">Hentai Haven</a>
 
 <a target="blank" href="http://eeemo.net" class="square">Zalgo Text</a>
 
