--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		                            <!-- top row -->
 
-<a target="blank" href="https://twitter.com" class="square">Twitter</a>
+<a target="blank" href="https://tweetdeck.twitter.com" class="square">Twitter</a>
 
 <a target="blank" href="https://www.youtube.com/feed/subscriptions" class="square">Youtube</a>
 
