--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <a target="blank" href="https://twitch.tv/directory/following" class="square">Twitch</a>
 
-<a href="http://gofuckyourselfitsnotforsale.com/" class="square">Eat my Ass</a>
+<a href="https://ssavr.com/" class="square">SSavr Link Sharing</a>
 
                                        <!-- second row -->
 <a target="blank" href="https://rule34.xxx/" class="square">Rule34</a>    
